--- a/package.json
+++ b/package.json
@@ -9,14 +9,45 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.7",
+    "@chakra-ui/react": "^1.8.8",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@uppy/aws-s3": "^2.0.9",
+    "@uppy/companion": "^3.5.2",
+    "@uppy/compressor": "^0.2.5",
+    "@uppy/core": "^2.1.10",
+    "@uppy/dashboard": "^2.1.4",
+    "@uppy/drop-target": "^1.1.3",
+    "@uppy/golden-retriever": "^2.0.6",
+    "@uppy/transloadit": "^2.1.5",
+    "aws-sdk": "^2.1128.0",
+    "formik": "^2.2.9",
+    "framer-motion": "^6",
+    "joi": "^17.6.0",
+    "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.1.5",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-images": "^1.2.0-beta.7",
+    "react-measure": "^2.5.2",
+    "react-pageflip": "^2.0.3",
+    "react-photo-gallery": "^8.0.0",
+    "react-scroll-parallax": "^3.1.0",
+    "swr": "^1.3.0",
+    "theme-ui": "^0.14.5",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.2.1",
+    "@types/js-cookie": "^3.0.2",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "17.0.30",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
+    "@types/react-measure": "^2.0.8",
+    "@types/yup": "^0.29.13",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
     "typescript": "4.6.4"
