--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "joi": "^17.6.0",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
+    "luxon": "^2.4.0",
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -43,6 +44,7 @@
     "@svgr/webpack": "^6.2.1",
     "@types/js-cookie": "^3.0.2",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/luxon": "^2.3.2",
     "@types/node": "17.0.30",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
